# mcp_python

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
scripts/: query_docs.sh
src/mcp_server/: __init__.py  http_server.py  main.py  server.py
src/mcp_server/resources/: __init__.py  file_handler.py
src/mcp_server/tools/: __init__.py  document.py
src/mcp_server/utils/: logging.py
tests/: __init__.py  conftest.py  test_document_tools.py  test_file_handler.py  test_server.py
